--- a/hotel-search.html
+++ b/hotel-search.html
@@ -22,7 +22,7 @@
 			</header>
 			<main class="hotel-search-main">
 				<div class="search-form clearfix">
-					<form action="https://echo.htmlacademy.ru" method="post">
+					<form class="clearfix" action="https://echo.htmlacademy.ru" method="post">
 						<div class="form-left-item">
 							<fieldset>
 								<legend>инфраструктура</legend>
@@ -59,8 +59,8 @@
 									<div class="point min-point"></div>
 									<div class="point max-point"></div>
 								</div>
-								<input type="Submit" class="btn btn-transparent" name="show" id="show-button" value="Показать">
 							</fieldset>
+							<input type="Submit" class="btn btn-transparent" name="show" id="show-button" value="Показать">
 						</div>
 					</form>
 				</div>
