--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 				<div class="map">
 					<img src="img/map.jpg" width="1200" height="593" alt="map">
 				</div>
-				<div class="footer-container">
+				<div class="footer-container clearfix">
 					<div class="footer-hashtag">
 						<a href="#">#Visitsedona</a>
 					</div>
