--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>HTML Academy: Седона</title>
+		<link href='https://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+		<link href="css/normalize.css" type="text/css" rel="stylesheet">
 		<link href="css/style.css" type="text/css" rel="stylesheet">
 	</head>
 	<body>
@@ -12,7 +14,7 @@
 					<ul class="clearfix">
 						<li><a href="#">Информация</a></li>
 						<li><a href="#">Фото и видео</a></li>
-						<li><a href="#">Гостиницы</a></li>
+						<li><a href="hotel-search.html">Гостиницы</a></li>
 						<li><a href="#">Карта Штата</a></li>
 					</ul>
 				</nav>
