--- a/hotel-search.html
+++ b/hotel-search.html
@@ -14,8 +14,8 @@
 					<ul class="clearfix">
 						<li><a href="#">информация</a></li>
 						<li><a href="#">фото и видео</a></li>
+						<li><a href="#">Карта Штата</a></li>
 						<li><a href="#">гостиницы</a></li>
-						<li><a href="#">карта штата</a></li>
 					</ul>
 					<a href="index.html">
 						<img src="img/small-logo.png" class="small-logo" width="138" height="70" alt="City of Sedona">
