Заверстал первую часть главной страницы.

--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
 					<img src="img/main_logo_background_mask.png" class="main-logo-background-mask" width="1200" height="57" alt=""> 
 				</div>
 				<div class="intro">
-					<b>Седона - небольшой городок в аризоне, заслуживающий большего!</b>
-					<p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+					<p class="intro-name">Седона - небольшой городок в аризоне,<br>заслуживающий большего!</p>
+					<p class="intro-description">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
 				</div>
 				<div class="advantages advantage1 clearfix">
 					<div class="advantage-description">
-						<b class="advantage-name">Настоящий городок</b>
-						<span class="advantage-number">- №1 -</span>
-						<p class="advantage-text">Седона - не аттракцион для туристов, там течет своя жизнь</p>
+						<p class="advantage-name">Настоящий<br>городок</p>
+						<span class="advantage-number">№1</span>
+						<p class="advantage-text">Седона - не аттракцион для туристов,<br>там течет своя жизнь</p>
 					</div>
 					<div class="advantage-img">
 						<img src="img/sedona-view.jpg" width="800" height="256" alt="sedona-view">
@@ -41,19 +41,31 @@
 				</div>
 				<div class="features clearfix">
 					<div class="feature feature1">
-						<img src="img/icon-house.png" class="feature-image" width="75" height="72" alt="house">
-						<b class="feature-name">Жилье</b>
-						<p class="feature-text">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>  
+						<div class="feature-img">
+							<img src="img/icon-house.png" width="75" height="72" alt="house">
+						</div>
+						<div class="feature-description">
+							<p class="feature-name">Жилье</p>
+							<p class="feature-text">Рекомендуем пожить в настоящем<br>мотеле, все как в кино!</p>  
+						</div>
 					</div>
 					<div class="feature feature2">
-						<img src="img/icon-burger.png" class="feature-image" width="74" height="70" alt="burger">
-						<b class="feature-name">Еда</b>
-						<p class="feature-text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+						<div class="feature-img">
+							<img src="img/icon-burger.png" width="74" height="70" alt="burger">
+						</div>
+						<div class="feature-description">
+							<p class="feature-name">Еда</p>
+							<p class="feature-text">Всегда заказывайте фирменный бургер,<br>вы не разочаруетесь!</p>
+						</div>
 					</div>
 					<div class="feature feature3">
-						<img src="img/icon-present.png" class="feature-image" width="64" height="76" alt="present">
-						<b class="feature-name">Сувениры</b>
-						<p class="feature-text">Не только китайского, но и местного производства!</p>
+						<div class="feature-img">
+							<img src="img/icon-present.png" width="64" height="76" alt="present">
+						</div>
+						<div class="feature-description">
+							<p class="feature-name">Сувениры</p>
+							<p class="feature-text">Не только китайского,<br>но и местного производства!</p>
+						</div>
 					</div>
 				</div>
 				<div class="advantages advantage2 clearfix">
@@ -61,26 +73,26 @@
 						<img src="img/devil-bridge-view.jpg" width="800" height="256" alt="devil-bridge-view">
 					</div>
 					<div class="advantage-description">
-						<b class="advantage-name">Там есть мост дьявола</b>
-						<span class="advantage-number">- №2 -</span>
-						<p class="advantage-text">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+						<p class="advantage-name">Там есть<br>мост дьявола</p>
+						<span class="advantage-number">№2</span>
+						<p class="advantage-text">Да, по нему можно пройти!<br>Если конечно вы осмелитесь</p>
 					</div>
 				</div>
 				<div class="advantages advantages-other clearfix">
 					<div class="advantage-description">
-						<b class="advantage-name">Небольшая площадь</b>
-						<span class="advantage-number">- №3 -</span>
-						<p class="advantage-text">Все достопримечательности находятся очень близко</p>
+						<p class="advantage-name">Небольшая<br>площадь</p>
+						<span class="advantage-number">№3</span>
+						<p class="advantage-text">Все достопримечательности<br>находятся очень близко</p>
 					</div>
 					<div class="advantage-description">
-						<b class="advantage-name">Красивая дорога</b>
-						<span class="advantage-number">- №4 -</span>
-						<p class="advantage-text">Ехать в седону из Лас-вегаса совсем не скучно!</p>
+						<p class="advantage-name">Красивая<br>дорога</p>
+						<span class="advantage-number">№4</span>
+						<p class="advantage-text">Ехать в седону из Лас-вегаса совсем<br>не скучно!</p>
 					</div>
 					<div class="advantage-description">
-						<b class="advantage-name">Мало туристов</b>
-						<span class="advantage-number">- №5 -</span>
-						<p class="features-text">Большинство едет в гранд-каньон и толпится там</p>
+						<p class="advantage-name">Мало<br>туристов</p>
+						<span class="advantage-number">№5</span>
+						<p class="advantage-text">Большинство едет в гранд-каньон и<br>толпится там</p>
 					</div>
 				</div>
 				<div class="hotel-search-head">
