Сверстана главная страница без формы. Футер - корявый :(

--- a/index.html
+++ b/index.html
@@ -96,10 +96,12 @@
 					</div>
 				</div>
 				<div class="hotel-search-head">
-					<b class="hotel-search-head-name">Заинтересовались?</b>
+					<p class="hotel-search-head-name">Заинтересовались?</p>
 					<p class="hotel-search-head-text">Укажите предполагаемые даты поездки,<br>
 					и мы покажем Вам лучшие предложения гостиниц в седоне</p>
-					<a href="#" class="btn hotel-search">Поиск гостиницы в седоне</a>
+					<div class="hotel-search-head-btn">
+						<a href="#" class="btn hotel-search">Поиск гостиницы в седоне</a>
+					</div>
 				</div>
 				<div class="hotel-search-form">
 					<form action="https://echo.htmlacademy.ru" method="post">
@@ -141,17 +143,17 @@
 				</div>
 				<div class="footer-container clearfix">
 					<div class="footer-hashtag">
-						<a href="#">#Visitsedona</a>
+						<a href="#">#visitsedona</a>
 					</div>
 					<div class="footer-social">
-						<a class="social-btn social-btn-tw" href="#">twitter</a>
-						<a class="social-btn social-btn-fb" href="#">Facebook</a>
-						<a class="social-btn social-btn-ytb" href="#">Youtube</a>
+						<a class="social-btn" href="#">twitter <span class=".icon-twitter"></span></a>
+						<a class="social-btn" href="#">facebook <span class=".icon-facebook"></span></a>
+						<a class="social-btn" href="#">youtube <span class=".icon-youtube"></span></a>
 					</div>
 					<div class="footer-copyright">
-						<p>Website by</p>
+						<span>website by</span>
 						<a class="btn" href="https://htmlacademy.ru">
-							<img src="img/html-academy.png" alt="HTML Academy">
+							<img src="img/html-academy.png" width="113" height="39" alt="HTML Academy">
 						</a>
 					</div>
 				</div>
