Начал верстку внутренней

--- a/hotel-search.html
+++ b/hotel-search.html
@@ -62,16 +62,16 @@
 									<div class="point max-point"></div>
 								</div>
 							</fieldset>
-							<input type="Submit" class="btn btn-transparent" name="show" id="show-button" value="Показать">
+							<button type="Submit" class="btn btn-transparent" name="show" id="show-button" value="Показать">
 						</div>
 					</form>
 				</div>
 				<div class="search-result-header">
-					<span class="search-result-header-title">Найдено:</span><output name="Result"></output>
+					<span class="search-result-header-title">Найдено:</span><output name="Result">3</output>
 					<span class="search-result-header-sort">Сортировка:</span>
 					<a href="#" class="sort active">по цене</a>
-					<a href="#" class="sort not-active">по типу</a>
-					<a href="#" class="sort not-active">по рейтингу</a>
+					<a href="#" class="sort passive">по типу</a>
+					<a href="#" class="sort passive">по рейтингу</a>
 					<span class="up"></span>
 					<span class="down"></span>
 				</div>
@@ -142,19 +142,19 @@
 				</div>
 			</main>
 			<footer class="hotel-search-footer">
-				<div class="footer-container">
+				<div class="footer-container clearfix">
 					<div class="footer-hashtag">
-						<a href="#">#Visitsedona</a>
+						<a href="#">#visitsedona</a>
 					</div>
 					<div class="footer-social">
-						<a class="social-btn social-btn-tw" href="#">twitter</a>
-						<a class="social-btn social-btn-fb" href="#">Facebook</a>
-						<a class="social-btn social-btn-ytb" href="#">Youtube</a>
+						<a class="social-btn" href="#">twitter <span class=".icon-twitter"></span></a>
+						<a class="social-btn" href="#">facebook <span class=".icon-facebook"></span></a>
+						<a class="social-btn" href="#">youtube <span class=".icon-youtube"></span></a>
 					</div>
 					<div class="footer-copyright">
-						<p>Website by</p>
+						<span>website by</span>
 						<a class="btn" href="https://htmlacademy.ru">
-							<img src="img/html-academy.png" alt="HTML Academy">
+							<img src="img/html-academy.png" width="113" height="39" alt="HTML Academy">
 						</a>
 					</div>
 				</div>
