Подправил замечания Палочки почему-то не получились на 100%. Цвет гут. Инхерит рулит, а отодвинуть их я хоть стреляй не могу.

--- a/hotel-search.html
+++ b/hotel-search.html
@@ -14,8 +14,8 @@
 					<ul class="clearfix">
 						<li><a href="#">информация</a></li>
 						<li><a href="#">фото и видео</a></li>
+						<li><a href="#">гостиницы</a></li>						
 						<li><a href="#">Карта Штата</a></li>
-						<li><a href="#">гостиницы</a></li>
 					</ul>
 					<a href="index.html">
 						<img src="img/small-logo.png" class="small-logo" width="138" height="70" alt="City of Sedona">
@@ -147,9 +147,9 @@
 						<a href="#">#visitsedona</a>
 					</div>
 					<div class="footer-social">
-						<a class="social-btn" href="#">twitter <span class=".icon-twitter"></span></a>
-						<a class="social-btn" href="#">facebook <span class=".icon-facebook"></span></a>
-						<a class="social-btn" href="#">youtube <span class=".icon-youtube"></span></a>
+						<a class="social-btn" href="#">twitter <span class="icon-twitter"></span></a>
+						<a class="social-btn" href="#">facebook <span class="icon-facebook"></span></a>
+						<a class="social-btn" href="#">youtube <span class="icon-youtube"></span></a>
 					</div>
 					<div class="footer-copyright">
 						<span>website by</span>
