--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 					<ul class="clearfix">
 						<li><a href="#">Информация</a></li>
 						<li><a href="#">Фото и видео</a></li>
-						<li><a href="#">Карта Штата</a></li>
 						<li><a href="hotel-search.html">Гостиницы</a></li>
+						<li><a href="#">Карта Штата</a></li>
 					</ul>
 				</nav>
 				<img src="img/small-logo.png" class="small-logo" width="138" height="70" alt="City of Sedona">
@@ -32,6 +32,7 @@
 				<div class="advantages advantage1 clearfix">
 					<div class="advantage-description">
 						<p class="advantage-name">Настоящий<br>городок</p>
+						<!-- Здесь и далее тег <br> вставлен специально и целенаправленно с целью универсального и единообразного форматирования блока "advantage-description" и соответствия контентной части макету -->
 						<span class="advantage-number">№1</span>
 						<p class="advantage-text">Седона - не аттракцион для туристов,<br>там течет своя жизнь</p>
 					</div>
@@ -64,7 +65,7 @@
 						</div>
 						<div class="feature-description">
 							<p class="feature-name">Сувениры</p>
-							<p class="feature-text">Не только китайского,<br>но и местного производства!</p>
+							<p class="feature-text">Не только китайского, но и местного<br>производства!</p>
 						</div>
 					</div>
 				</div>
@@ -75,7 +76,7 @@
 					<div class="advantage-description">
 						<p class="advantage-name">Там есть<br>мост дьявола</p>
 						<span class="advantage-number">№2</span>
-						<p class="advantage-text">Да, по нему можно пройти!<br>Если конечно вы осмелитесь</p>
+						<p class="advantage-text">Да, по нему можно пройти! Если конечно<br>вы осмелитесь</p>
 					</div>
 				</div>
 				<div class="advantages advantages-other clearfix">
@@ -146,9 +147,9 @@
 						<a href="#">#visitsedona</a>
 					</div>
 					<div class="footer-social">
-						<a class="social-btn" href="#">twitter <span class=".icon-twitter"></span></a>
-						<a class="social-btn" href="#">facebook <span class=".icon-facebook"></span></a>
-						<a class="social-btn" href="#">youtube <span class=".icon-youtube"></span></a>
+						<a class="social-btn" href="#">twitter <span class="icon-twitter"></span></a>
+						<a class="social-btn" href="#">facebook <span class="icon-facebook"></span></a>
+						<a class="social-btn" href="#">youtube <span class="icon-youtube"></span></a>
 					</div>
 					<div class="footer-copyright">
 						<span>website by</span>
