Глюк с размерами изображения и его родителя.

--- a/hotel-search.html
+++ b/hotel-search.html
@@ -72,8 +72,8 @@
 					<a href="#" class="sort active">по цене</a>
 					<a href="#" class="sort passive">по типу</a>
 					<a href="#" class="sort passive">по рейтингу</a>
-					<span class="up"></span>
-					<span class="down"></span>
+					<a href="#" class="arrow arrow-passive">up<span class="icon-up-dir"></span></a>
+					<a href="#" class="arrow arrow-active">down<span class="icon-down-dir"></span></a>					
 				</div>
 				<div class="search-result">
 					<div class="search-result-item clearfix">
@@ -82,11 +82,11 @@
 						</div>
 						<div class="search-result-item-mid">
 							<p class="search-result-hotel-name">Amara-resort & SPA</p>
-							<div class="search-result-typeandprice">
-								<span>Гостиница</span><span>от 3500 р.</span>
+							<div class="search-result-type-and-price">
+								<span class="search-result-type">Гостиница</span><span class="search-result-price">от 3500 р.</span>
 							</div>
-								<a href="#" class="btn detail">Подробнее</a>
-								<a href="#" class="btn book">Забронировать</a>
+							<a href="#" class="btn detail">Подробнее</a>
+							<a href="#" class="btn book">Забронировать</a>
 						</div>
 						<div class="search-result-item-right">
 							<div class="stars">
@@ -103,11 +103,11 @@
 						</div>
 						<div class="search-result-item-mid">
 							<p class="search-result-hotel-name">Desert quail inn</p>
-							<div class="search-result-typeandprice">
-								<span>Мотель</span><span>от 2000 р.</span>
+							<div class="search-result-type-and-price">
+								<span class="search-result-type">Мотель</span><span class="search-result-price">от 2000 р.</span>
 							</div>
-								<a href="#" class="btn detail">Подробнее</a>
-								<a href="#" class="btn book">Забронировать</a>
+							<a href="#" class="btn detail">Подробнее</a>
+							<a href="#" class="btn book">Забронировать</a>
 						</div>
 						<div class="search-result-item-right">
 							<div class="stars">
@@ -124,11 +124,11 @@
 						</div>
 						<div class="search-result-item-mid">
 							<p class="search-result-hotel-name">Villas at poco diablo</p>
-							<div class="search-result-typeandprice">
-								<span>Апартаменты</span><span>от 4000 р.</span>
+							<div class="search-result-type-and-price">
+								<span class="search-result-type">Апартаменты</span><span class="search-result-price">от 4000 р.</span>
 							</div>
-								<a href="#" class="btn detail">Подробнее</a>
-								<a href="#" class="btn book">Забронировать</a>
+							<a href="#" class="btn detail">Подробнее</a>
+							<a href="#" class="btn book">Забронировать</a>
 						</div>
 						<div class="search-result-item-right">
 							<div class="stars">
