Сверстал главную и внутреннюю без форм поиска

--- a/hotel-search.html
+++ b/hotel-search.html
@@ -67,8 +67,8 @@
 					</form>
 				</div>
 				<div class="search-result-header">
-					<span class="search-result-header-title">Найдено:</span><output name="Result">3</output>
-					<span class="search-result-header-sort">Сортировка:</span>
+					<span class="search-result-header-title">найдено:</span><output name="result">3</output>
+					<span class="search-result-header-sort">сортировка:</span>
 					<a href="#" class="sort active">по цене</a>
 					<a href="#" class="sort passive">по типу</a>
 					<a href="#" class="sort passive">по рейтингу</a>
@@ -81,19 +81,19 @@
 							<img src="img/hotel-amara.png" width="135" height="90" alt="hotel-amara">
 						</div>
 						<div class="search-result-item-mid">
-							<p class="search-result-hotel-name">Amara-resort & SPA</p>
+							<p class="search-result-hotel-name">amara resort & SPA</p>
 							<div class="search-result-type-and-price">
-								<span class="search-result-type">Гостиница</span><span class="search-result-price">от 3500 р.</span>
+								<span class="search-result-type">гостиница</span><span class="search-result-price">от 3500 р.</span>
 							</div>
-							<a href="#" class="btn detail">Подробнее</a>
-							<a href="#" class="btn book">Забронировать</a>
+							<a href="#" class="btn detail">подробнее</a>
+							<a href="#" class="btn book">забронировать</a>
 						</div>
 						<div class="search-result-item-right">
 							<div class="stars">
-								<span>x</span><span>x</span><span>x</span><span>x</span>
+								<span class="icon-star"></span><span class="icon-star"></span><span class="icon-star"></span><span class="icon-star"></span>
 							</div>
 							<div class="rating-field">
-								<span>Рейтинг:8,5</span>
+								<span>рейтинг:</span><output class="rating-result" name="rating-result">8,5</output>
 							</div>
 						</div>
 					</div>
@@ -102,19 +102,19 @@
 							<img src="img/hotel-desert.png" width="135" height="90" alt="hotel-desert">
 						</div>
 						<div class="search-result-item-mid">
-							<p class="search-result-hotel-name">Desert quail inn</p>
+							<p class="search-result-hotel-name">desert quail inn</p>
 							<div class="search-result-type-and-price">
-								<span class="search-result-type">Мотель</span><span class="search-result-price">от 2000 р.</span>
+								<span class="search-result-type">мотель</span><span class="search-result-price">от 2000 р.</span>
 							</div>
-							<a href="#" class="btn detail">Подробнее</a>
-							<a href="#" class="btn book">Забронировать</a>
+							<a href="#" class="btn detail">подробнее</a>
+							<a href="#" class="btn book">забронировать</a>
 						</div>
 						<div class="search-result-item-right">
 							<div class="stars">
-								<span>x</span><span>x</span>
+								<span class="icon-star"></span><span class="icon-star"></span>
 							</div>
 							<div class="rating-field">
-								<span>Рейтинг:8,9</span>
+								<span>рейтинг:</span><output class="rating-result" name="rating-result">8,9</output>
 							</div>
 						</div>
 					</div>
@@ -123,19 +123,19 @@
 							<img src="img/hotel-villas.png" width="135" height="90" alt="hotel-villas">
 						</div>
 						<div class="search-result-item-mid">
-							<p class="search-result-hotel-name">Villas at poco diablo</p>
+							<p class="search-result-hotel-name">villas at poco diablo</p>
 							<div class="search-result-type-and-price">
-								<span class="search-result-type">Апартаменты</span><span class="search-result-price">от 4000 р.</span>
+								<span class="search-result-type">апартаменты</span><span class="search-result-price">от 4000 р.</span>
 							</div>
-							<a href="#" class="btn detail">Подробнее</a>
-							<a href="#" class="btn book">Забронировать</a>
+							<a href="#" class="btn detail">подробнее</a>
+							<a href="#" class="btn book">забронировать</a>
 						</div>
 						<div class="search-result-item-right">
 							<div class="stars">
-								<span>x</span><span>x</span><span>x</span>
+								<span class="icon-star"></span><span class="icon-star"></span><span class="icon-star"></span>
 							</div>
 							<div class="rating-field">
-								<span>Рейтинг:9,2</span>
+								<span>рейтинг:</span><output class="rating-result" name="rating-result">9,2</output>
 							</div>
 						</div>
 					</div>
@@ -153,7 +153,7 @@
 					</div>
 					<div class="footer-copyright">
 						<span>website by</span>
-						<a class="btn" href="https://htmlacademy.ru">
+						<a class="btn btn-copyright" href="https://htmlacademy.ru">
 							<img src="img/html-academy.png" width="113" height="39" alt="HTML Academy">
 						</a>
 					</div>
