--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 					<p class="hotel-search-head-text">Укажите предполагаемые даты поездки,<br>
 					и мы покажем Вам лучшие предложения гостиниц в седоне</p>
 					<div class="hotel-search-head-btn">
-						<a href="#" class="btn hotel-search">Поиск гостиницы в седоне</a>
+						<a href="#" class="btn hotel-search-btn">Поиск гостиницы в седоне</a>
 					</div>
 				</div>
 				<div class="hotel-search-form">
@@ -153,7 +153,7 @@
 					</div>
 					<div class="footer-copyright">
 						<span>website by</span>
-						<a class="btn" href="https://htmlacademy.ru">
+						<a class="btn btn-copyright" href="https://htmlacademy.ru">
 							<img src="img/html-academy.png" width="113" height="39" alt="HTML Academy">
 						</a>
 					</div>
