Сверстал полностью обе страницы с формами. добавил тень к контейнеру Отработал стайлгайд, но не полнстью. Не все понял в стайлгайде.

--- a/hotel-search.html
+++ b/hotel-search.html
@@ -14,7 +14,7 @@
 					<ul class="clearfix">
 						<li><a href="#">информация</a></li>
 						<li><a href="#">фото и видео</a></li>
-						<li><a href="#">гостиницы</a></li>						
+						<li class="current-page"><a>гостиницы</a></li>						
 						<li><a href="#">Карта Штата</a></li>
 					</ul>
 					<a href="index.html">
@@ -80,7 +80,7 @@
 									<div class="point max-point"></div>
 								</div>
 							</fieldset>
-							<button type="Submit" class="btn btn-transparent" name="show" id="show-button" value="Показать">
+							<button type="Submit" class="btn btn-transparent" name="show" id="show-button">Показать</button>
 						</div>
 					</form>
 				</div>
