--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<div class="advantages advantage1 clearfix">
 					<div class="advantage-description">
 						<p class="advantage-name">Настоящий<br>городок</p>
-						<!-- Здесь и далее тег <br> вставлен специально и целенаправленно с целью универсального и единообразного форматирования блока "advantage-description" и соответствия контентной части макету -->
+						<!-- Здесь и далее тег <br> в контентной части вставлен специально и целенаправленно с целью универсального и единообразного форматирования блока "advantage-description" и соответствия контентной части макету -->
 						<span class="advantage-number">№1</span>
 						<p class="advantage-text">Седона - не аттракцион для туристов,<br>там течет своя жизнь</p>
 					</div>
