исправил глюки недобраузера

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>HTML Academy: Седона</title>
-		<link href='https://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+		<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=latin,cyrillic" rel="stylesheet" type="text/css">
 		<link href="css/normalize.css" type="text/css" rel="stylesheet">
 		<link href="css/style.css" type="text/css" rel="stylesheet">
 	</head>
@@ -108,25 +108,25 @@
 							<div class="form-item-row">
 								<label class="form-item-label" for="arrival-date">дата заезда:</label>
 								<input class="form-date-field" type="text" name="arrival-date-field" id="arrival-date" value="24 апреля 2016">
-								<button class="calendar" href="#">calendar <span class="icon-calendar"></span></button>
+								<button class="calendar">calendar <span class="icon-calendar"></span></button>
 							</div>
 							<div class="form-item-row">
 								<label class="form-item-label" for="departure-date">дата выезда:</label>
 								<input class="form-date-field" type="text" name="departure-date-field" id="departure-date" value="4 июля 2016">
-								<button class="calendar" href="#">calendar <span class="icon-calendar"></span></button>
+								<button class="calendar">calendar <span class="icon-calendar"></span></button>
 							</div>
 							<div class="form-item-row">
 								<label class="form-item-label" for="adults-amount">взрослые:</label>
 								<div class="form-item-rangeblock">
-									<button class="minus" href="#">-<span class="icon-minus"></span></button>
-									<input class="form-amount-field" type="text" name="adults-amount-field" id="adults-amount" min="1" max="50" value="2">
-									<button class="plus" href="#">+<span class="icon-plus"></span></button>
+									<button class="minus">-<span class="icon-minus"></span></button>
+									<input class="form-amount-field" type="text" name="adults-amount-field" id="adults-amount" value="2">
+									<button class="plus">+<span class="icon-plus"></span></button>
 								</div>
 								<label class="form-item-label form-item-label-right" for="children-amount">дети:</label>
 								<div class="form-item-rangeblock">
-									<button class="minus" href="#">-<span class="icon-minus"></span></button>
-									<input class="form-amount-field" type="text" name="children-amount-field" id="children-amount" min="0" max="50" value="0">
-									<button class="plus" href="#">+<span class="icon-plus"></span></button>
+									<button class="minus">-<span class="icon-minus"></span></button>
+									<input class="form-amount-field" type="text" name="children-amount-field" id="children-amount" value="0">
+									<button class="plus">+<span class="icon-plus"></span></button>
 								</div>
 							</div>
 							<div class="form-find-btn">
