--- a/hotel-search.html
+++ b/hotel-search.html
@@ -99,7 +99,7 @@
 							<img src="img/hotel-amara.png" width="135" height="90" alt="hotel-amara">
 						</div>
 						<div class="search-result-item-mid">
-							<p class="search-result-hotel-name">amara resort & SPA</p>
+							<a href="#" class="search-result-hotel-name">amara resort & SPA</a>
 							<div class="search-result-type-and-price">
 								<span class="search-result-type">гостиница</span><span class="search-result-price">от 3500 р.</span>
 							</div>
@@ -120,7 +120,7 @@
 							<img src="img/hotel-desert.png" width="135" height="90" alt="hotel-desert">
 						</div>
 						<div class="search-result-item-mid">
-							<p class="search-result-hotel-name">desert quail inn</p>
+							<a href="#" class="search-result-hotel-name">desert quail inn</a>
 							<div class="search-result-type-and-price">
 								<span class="search-result-type">мотель</span><span class="search-result-price">от 2000 р.</span>
 							</div>
@@ -141,7 +141,7 @@
 							<img src="img/hotel-villas.png" width="135" height="90" alt="hotel-villas">
 						</div>
 						<div class="search-result-item-mid">
-							<p class="search-result-hotel-name">villas at poco diablo</p>
+							<a href="#" class="search-result-hotel-name">villas at poco diablo</a>
 							<div class="search-result-type-and-price">
 								<span class="search-result-type">апартаменты</span><span class="search-result-price">от 4000 р.</span>
 							</div>
@@ -171,9 +171,7 @@
 					</div>
 					<div class="footer-copyright">
 						<span>website by</span>
-						<a class="btn btn-copyright" href="https://htmlacademy.ru">
-							<img src="img/html-academy.png" width="113" height="39" alt="HTML Academy">
-						</a>
+						<a class="btn btn-copyright" href="https://htmlacademy.ru">						</a>
 					</div>
 				</div>
 			</footer>
