--- a/index.html
+++ b/index.html
@@ -151,9 +151,7 @@
 					</div>
 					<div class="footer-copyright">
 						<span>website by</span>
-						<a class="btn btn-copyright" href="https://htmlacademy.ru">
-							<img src="img/html-academy.png" width="113" height="39" alt="HTML Academy">
-						</a>
+						<a class="btn btn-copyright" href="https://htmlacademy.ru">						</a>
 					</div>
 				</div>
 			</footer>
