--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>HTML Academy: Седона</title>
 		<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=latin,cyrillic" rel="stylesheet" type="text/css">
 		<link href="css/normalize.css" type="text/css" rel="stylesheet">
-		<link href="css/style.css" type="text/css" rel="stylesheet">
+		<link href="css/style_min.css" type="text/css" rel="stylesheet">
 	</head>
 	<body>
 		<div class="container">
@@ -138,7 +138,7 @@
 			</main>
 			<footer class="index-footer">
 				<div class="map">
-					<img src="img/map.jpg" width="1200" height="593" alt="map">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31936.861402311286!2d-111.76709281794506!3d34.87544157313938!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0ZbQt9C-0L3QsCA4NjMzNiwg0KHQv9C-0LvRg9GH0LXQvdGWINCo0YLQsNGC0Lgg0JDQvNC10YDQuNC60Lg!5e1!3m2!1suk!2sua!4v1463607305818" width="1200" height="593" frameborder="0" style="border:0" allowfullscreen></iframe>
 				</div>
 				<div class="footer-container clearfix">
 					<div class="footer-hashtag">
@@ -156,5 +156,6 @@
 				</div>
 			</footer>
 		</div>
+		<script src="js/popup_min.js"></script>
 	</body>
 </html>
